# mrmpicpp

./: .gitignore  CMakeLists.txt  README.md  errors.h  keyvalue.cpp  keyvalue.h  loadBalanceScript.sh  main.cpp  mapreduce.cpp  mapreduce.h  wordcountmain.cpp  wordcountmpi.cpp  wordcountmpi2.cpp  wordcountthread  wordcountthreaded.cpp  workq.h  workq.h.gch
development/: helloworld.c  main.cpp  mpiSendStr.c  wordcount  wordcountmpi.cpp  wordcountmpithreaded.cpp  wordcountthreaded.cpp  workq.c
mpiMR/: compileAndUpdate  core  errors.h  hosts  mpiSendStr.c  runsendstr  runss  sendstr  simpleSend.c  ss
